--- a/themes.local/feedmei+_night.css
+++ b/themes.local/feedmei+_night.css
@@ -1,6 +1,7 @@
 @import "feedmei+.css";
 
 body,
+.content iframe,
 .content :not(a) > img,
 .flat .dijitProgressBarFull,
 .flat .dijitProgressBarLabel { filter: invert(94%) }
@@ -16,14 +17,7 @@ body.ttrss_prefs .dijitProgressBarLabel { filter: none !important }
 .hotkeys-help .hk,
 .content :not(.feed) a,
 .dijitMenuItem.dijitDisabled .dijitMenuItemLabel {
-	color: #160 !important;
-	filter: invert(94%);
-}
-.dijitMenuItemSelected.dijitDisabled .dijitMenuItemLabel { background-color: #000 !important }
-
-a:hover,
-#header a:hover,
-.content :not(.feed) a:hover {
 	color: #270 !important;
 	filter: invert(94%);
 }
+.dijitMenuItemSelected.dijitDisabled .dijitMenuItemLabel { background-color: #000 !important }
